--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "superagent": "^5.0.2",
     "superagent-proxy": "^2.0.0",
     "memory-cache": "^0.2.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "google-translate-api": "^2.3.0"
   }
 }
