--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "google-baidu-translate-api": "^1.0.3",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0",
-    "request": "~2.88.0",
-    "superagent": "^5.0.2",
-    "superagent-proxy": "^2.0.0",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
-    "google-translate-api": "^2.3.0"
+    "morgan": "~1.9.0",
+    "npm": "^6.9.0",
+    "request": "~2.88.0",
+    "superagent": "^5.0.2",
+    "superagent-proxy": "^2.0.0"
   }
 }
