--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm audit fix && node ./bin/www"
   },
   "dependencies": {
+    "tar": "^4.4.8",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -16,8 +17,10 @@
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "npm": "^6.9.0",
-    "request": "~2.88.0",
+    "request": "^2.88.0",
     "superagent": "^5.0.2",
-    "superagent-proxy": "^2.0.0"
+    "superagent-proxy": "^2.0.0",
+    "warframe-worldstate-parser": "^2.6.0",
+    "request-promise": "^4.2.4"
   }
 }
