--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "npm audit fix && node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "tar": "^4.4.8",
