--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .idea/
 node_modules/
+config/1600598_zhshy.top.key
+home/key/1600598_zhshy.top.key
+home/key/1600598_zhshy.top.pem
+config/1600598_zhshy.top.pem
