--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ config/1600598_zhshy.top.key
 home/key/1600598_zhshy.top.key
 home/key/1600598_zhshy.top.pem
 config/1600598_zhshy.top.pem
+
+yarn-error.log
