--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request-promise": "^4.2.4",
     "cheerio": "^1.0.0-rc.3",
     "puppeteer": "^1.18.1",
-    "puppeteer-core": "^1.18.1"
+    "puppeteer-core": "^1.18.1",
+    "node-schedule": "^1.3.2"
   }
 }
