--- a/package.json
+++ b/package.json
@@ -7,25 +7,26 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "tar": "^4.4.8",
+    "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "google-baidu-translate-api": "^1.0.3",
-    "translate-google": "^1.4.3",
     "http-errors": "~1.6.2",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
+    "node-schedule": "^1.3.2",
     "npm": "^6.13.4",
-    "request": "^2.88.0",
-    "superagent": "^5.2.1",
-    "superagent-proxy": "^2.0.0",
-    "warframe-worldstate-parser":"^2.15.1",
-    "cheerio": "^1.0.0-rc.3",
     "puppeteer": "^5.3.0",
     "puppeteer-core": "^5.3.0",
-    "node-schedule": "^1.3.2"
+    "request": "^2.88.0",
+    "request-param": "^1.0.1",
+    "superagent": "^5.2.1",
+    "superagent-proxy": "^2.0.0",
+    "tar": "^4.4.8",
+    "translate-google": "^1.4.3",
+    "warframe-worldstate-parser": "^2.15.1"
   }
 }
