--- a/package.json
+++ b/package.json
@@ -20,12 +20,10 @@
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.2",
     "npm": "^6.13.4",
-    "request": "^2.88.0",
     "request-param": "^1.0.1",
-    "superagent": "^5.2.1",
-    "superagent-proxy": "^2.0.0",
+    "superagent": "^6.1.0",
+    "superagent-proxy": "^3.0.0",
     "tar": "^4.4.8",
-    "translate-google": "^1.4.3",
-    "warframe-worldstate-parser": "^2.15.1"
+    "translate-google": "^1.4.3"
   }
 }
