--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,8 @@
 .idea/
 node_modules/
-config/1600598_zhshy.top.key
-home/key/1600598_zhshy.top.key
-home/key/1600598_zhshy.top.pem
-config/1600598_zhshy.top.pem
-
 yarn-error.log
-
 yarn.lock
-
-public/screenshot/
-
 package-lock.json
-
 logs/
-
 utils/lexicon/wmItems/
+.vscode/launch.json
