--- a/package.json
+++ b/package.json
@@ -7,25 +7,24 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@vitalets/google-translate-api": "^9.2.0",
     "cheerio": "^1.0.0-rc.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "ejs": "^3.1.9",
+    "express": "^4.19.1",
     "express-fingerprint": "^1.2.2",
     "express-promise-router": "^4.1.1",
-    "google-baidu-translate-api": "^1.0.3",
     "http-errors": "~1.6.2",
     "memory-cache": "^0.2.0",
     "moment": "^2.24.0",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.2",
-    "npm": "^6.13.4",
+    "npm": "^10.5.0",
     "request-param": "^1.0.1",
-    "superagent": "^6.1.0",
+    "superagent": "^8.1.2",
     "superagent-proxy": "^3.0.0",
     "tar": "^4.4.8",
-    "translate-google": "^1.4.3",
     "winston": "^3.7.2"
   }
 }
